# suzorako

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 06ff711b82b1_initial_schema.py
suzorako/: config.py  database.py  main.py
suzorako/routers/: accounts.py  budget.py  imports.py  register.py  transactions.py
suzorako/services/: account_service.py  budget_service.py  import_csv.py  import_ofx.py  transaction_service.py  validation.py
suzorako/static/css/: style.css
suzorako/static/js/: budget-chart.js
suzorako/templates/: base.html
suzorako/templates/accounts/: form.html  list.html  register.html
suzorako/templates/budget/: index.html
suzorako/templates/import/: index.html
suzorako/templates/partials/: budget_table.html  import_preview.html  register_rows.html  split_row.html
suzorako/templates/transactions/: form.html
suzorako/utils/: money.py
tests/: conftest.py  test_import_preview.py  test_validation.py
